@@ -230,8 +230,6 @@ version = 2.6.0a2
         #station  = your Weather Underground station ID (eg, KORHOODR3)
         #password = your Weather Underground password
 
-        driver = weewx.restful.Ambient
-
     [[PWSweather]]
         # This section is for configuring posts to PWSweather.com
 
@@ -239,8 +237,6 @@ version = 2.6.0a2
         # lines and fill them with your station and password:
         #station  = your PWSweather station ID (eg, KORHOODR3)
         #password = your PWSweather password
-
-        driver = weewx.restful.Ambient
 
     [[CWOP]]
         # This section is for configuring posts to CWOP
@@ -259,8 +255,6 @@ version = 2.6.0a2
         # How often we should post in seconds. 0=with every archive record
         interval = 600  
 
-        driver = weewx.restful.CWOP
-
     [[StationRegistry]]
         # Uncomment the following line to register this weather station.
         #register_this_station = True
@@ -272,8 +266,6 @@ version = 2.6.0a2
         # Specify a description of the station, otherwise the location from
         # [Station] will be used.
         #description = The greatest station on earth
-
-        driver = weewx.restful.StationRegistry
 
 ##############################################################################
 
@@ -491,4 +483,8 @@ version = 2.6.0a2
 
     [[WxEngine]]
         # The list of services the main weewx engine should run:
-        service_list = weewx.wxengine.StdTimeSynch, weewx.wxengine.StdConvert, weewx.wxengine.StdCalibrate, weewx.wxengine.StdQC, weewx.wxengine.StdArchive, weewx.wxengine.StdPrint, weewx.wxengine.StdRESTful, weewx.wxengine.StdReport
+        prep_services = weewx.wxengine.StdTimeSynch
+        process_services = weewx.wxengine.StdConvert, weewx.wxengine.StdCalibrate, weewx.wxengine.StdQC
+        archive_services = weewx.wxengine.StdArchive,
+        restful_services = weewx.restx.StdWunderground, weewx.restx.StdPWSweather, weewx.restx.StdCWOP, weewx.restx.StdStationRegistry
+        report_services = weewx.wxengine.StdPrint, weewx.wxengine.StdReport
