@@ -7,6 +7,10 @@ Changed the RESTful architecture so RESTful services are now first-class
 weewx services. This should simplify the installation of 3rd party
 extensions that use these services.
 
+Broke up service_list, the very long list of services to be run, into
+five separate lists. This will allow services to be grouped together,
+according to when they should be run.
+
 Changed the default time and date labels to use locale dependent formatting.
 The defaults should now work in most locales, provided you set the
 environment variable LANG before running weewx.
